# DISPLACE_GUI

./: .gitignore  .gitmodules  .nojekyll  Building-cmake.md  Building.MacOSX  Building.unix  Building.win  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.sample  CONTRIBUTING.md  COPYRIGHT.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DOCUMENTATION.md  Dockerfile  Doxyfile  Harbour.h  INSTALLING_DISPLACE_SIMULATOR_ON_THE_HPC.txt  InputFileFormats.txt  Makefile  Makefile.Debug  Makefile.Release  Makefile.hpc  Metier.cpp  Population.h  R.pri  README.md  README.txt  Readme.md  Readme.txt  Ship.cpp  Tac.cpp  Vessel.cpp  Vessel.h  Windows - COMPILE DISPLACE FROM THE DISPLACE SDK.docx  aqua-cfil - Shortcut.lnk  base_script  (+38 more)
QMapControl/: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  QMapControl.pro  README.md  Readme
QMapControl/QMapControl/: QMapControl.pri  QMapControl.pro
QMapControl/src/: geometry.h  imagemanager.cpp  imagemanager.h  layer.h  layermanager.cpp  layermanager.h  linestring.h  mapcontrol.cpp  mapcontrol.h  mapnetwork.h  openseamapadapter.cpp  openseamapadapter.h  point.h  src.pro
avaifieldshuffler/: CMakeLists.txt  Makefile.hpc  avaifieldshuffler.pro  main.cpp
avaifieldupdater/: CMakeLists.txt  Makefile.hpc  avaifieldupdater.pro  main.cpp
commons/: Benthos.cpp  CMakeLists.txt  Calendar.cpp  Calendar.h  ConfigTables.cpp  DatabaseModelLoader.cpp  DatabaseModelLoader.h  Firm.cpp  Fishfarm.cpp  Harbour.cpp  Makefile  Makefile.Debug  Makefile.Release  Makefile.hpc  Metier.cpp  ModelLoader.cpp  ModelLoader.h  Node.cpp  Population.cpp  Ship.cpp  SimModel.cpp  SimModel.h  Tac.cpp  TextfileModelLoader.cpp  TextfileModelLoader.h  Vessel.cpp  Vessel.cpp.autosave  VesselDebugHelper.cpp  Windmill.cpp  biomodule.cpp  biomodule.h  commons.pro  commons_global.h  dataloader.h  dataloaderbenthos.cpp  dataloaderbenthos.h  dataloadercommercialships.cpp  dataloadercommercialships.h  dataloaderfishfarms.cpp  dataloaderfishfarms.h  (+26 more)
commons/DatabaseInputImpl/: DatabaseCalendarLoader.cpp  DatabaseCalendarLoader.h  HarboursLoader.cpp  HarboursLoader.h  Impl.h  LoadBenthosImpl.cpp  LoadMetierImpl.cpp  LoadNodesAndGraphiImpl.cpp  LoadPopulationImpl.cpp  LoadShipsAndVesselsImpl.cpp  MetiersLoader.cpp  MetiersLoader.h  PopulationsLoader.cpp  PopulationsLoader.h  VesselsLoader.cpp  VesselsLoader.h
commons/TextImpl/: Impl.h  LoadBenthosImpl.cpp  LoadFishFarmsImpl.cpp  LoadMetiersImpl.cpp  LoadPopulationsImpl.cpp  LoadShipsImpl.cpp  LoadVesselsImpl.cpp  LoadWindmillsImpl.cpp
commons/commons_tests/: CMakeLists.txt  (+18 more)
dteditor/: CMakeLists.txt  dtcsvexporter.cpp  dtcsvexporter.h  dtcsvreader.cpp  dtcsvreader.h  dtcsvwriter.cpp  dtcsvwriter.h  dteditor.cpp  dteditor.pro  dteditor.qrc  dteditor.rc  dteditorwindow.cpp  dteditorwindow.h  dteditorwindow.ui  dtgraphicsscene.cpp  dtgraphicsscene.h  graphnodeextra.cpp  graphnodeextra.h  graphnodeitem.cpp  graphnodeitem.h  nodemappingsdialog.cpp  nodemappingsdialog.h  nodemappingsdialog.ui
formats/: CMakeLists.txt  Makefile.hpc  formatexception.h  formats.pro  formats_globals.h
objeditor/: CMakeLists.txt  csvspecspage.cpp  csvspecspage.h  csvspecspage.ui  defaults.cpp  defaults.h  fishfarmmapmodel.cpp  fishfarmmapmodel.h  linestringmapmodel.cpp  linestringmapmodel.h  mapcontrolgraphicsmodel.cpp  mapcontrolgraphicsmodel.h  maplistadapter.cpp  maplistadapter.h  mapshapefilelistadapter.cpp  mapshapefilelistadapter.h  objeditor.pro  objeditor.rc  runscriptspage.cpp  runscriptspage.h  runscriptspage.ui  scriptselectionform.cpp  scriptselectionform.h  settings.cpp  settings.h  singlepointmapmodel.cpp  singlepointmapmodel.h  vesseleditor.cpp  vesseleditor.qrc  vesseleditormainwindow.cpp  vesseleditormainwindow.h  vesseleditormainwindow.ui
qtcommons/: CMakeLists.txt  PlotWidget.cpp  PlotWidget.h  StatsPlot.h  appsettings.cpp  appsettings.h  qcustomplot.h  qsignalblocker.h  qtcommons.pro  qtcommons.qrc  qtcommons_global.h
qtgui/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  MyGraphicsView.h  MygraphicsView.cpp  PlotWidget.cpp  PlotWidget.h  VesselGUI.cpp  VesselGUI.h  VesselGUI.qrc  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  backgroundworker.cpp  backgroundworker.h  calendar.cpp  calendar.h  config.cpp  config.h  configdialog.cpp  configdialog.h  configdialog.ui  creategraphdialog.cpp  creategraphdialog.h  creategraphdialog.ui  createshortestpathdialog.cpp  createshortestpathdialog.h  createshortestpathdialog.ui  csveditor.cpp  csveditor.h  csveditor.ui  dbhelper.cpp  dbhelper.h  displacegui.pro  displacemodel.cpp  displacemodel.h  editorlayerinterface.h  editpalettedialog.cpp  editpalettedialog.h  (+82 more)
scheduler/: CMakeLists.txt  batchcreatedialog.cpp  batchcreatedialog.h  batchcreatedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rundialog.cpp  rundialog.h  rundialog.ui  scheduler.pro  scheduler.rc  schedulerjob.cpp  schedulerjob.h  schedulerjobadapter.cpp  schedulerjobadapter.h  schedulerscriptgenerator.cpp  schedulerscriptgenerator.h  simulationrun.cpp  simulationrun.h  windowsscriptgenerator.cpp  windowsscriptgenerator.h
simulator/: Actor.h  Benthos.cpp  Benthos.h  CMakeLists.txt  Environment.cpp  Environment.h  Harbour.cpp  Makefile  Makefile.Debug  Makefile.Release  Makefile.hpc  Metier.h  Node.cpp  Node.h  Population.cpp  README.txt  Ship.cpp  Ship.h  Simulation.cpp  Simulation.h  Vessel.cpp  Vessel.h  base_script  biomodule.cpp  biomodule.h  biomodule2.cpp  biomodule2.h  dataloader.h  dataloaderbenthos.cpp  dataloaderbenthos.h  dataloadervessels.cpp  dataloadervessels.h  exportdata.h  fisheriesmanagmt.cpp  fisheriesmanagmt.h  getRSS.cpp  ibm_vessels_gui.pro.user.3ed1d06.2.7pre1  ipc.cpp  ipc.h  main.cpp  (+25 more)
tests/: CMakeLists.txt  Makefile.hpc  datacollector.cpp  dtrees.cpp  main.cpp  rutils.cpp  sparsecontainer_test.cpp  tests.pro  timeseries.cpp  valuespermet_test.cpp
tseditor/: CMakeLists.txt  tseditor.cpp  tseditor.pro  tseditor.qrc  tseditor.rc  tseditorwindow.cpp  tseditorwindow.h  tseditorwindow.ui
(+7159 files in other folders)
